Closed Bug 477918 Opened 15 years ago Closed 15 years ago

Crash running mochichrome tests

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mrbkap, Assigned: mrbkap)

References

Details

(Keywords: crash, dogfood, fixed1.9.1)

Attachments

(1 file)

Attached patch FixSplinter Review
I was attempting to run the mochichrome tests when I crashed with a trashed stack. The problem is in nsNPAPIPlugin.cpp, it does:

      pbs->GetPrivateBrowsingEnabled((PRBool*)result);

where |result| is a |void *|. The problem is that, in this case, the |void *| points to an |NPBool*|, and PRBool is wider than NPBool. The result is that we tromp all over the stack and I end up crashing horribly. I don't know why tinderboxes aren't all orange.
Attachment #361663 - Flags: superreview?(jst)
Attachment #361663 - Flags: review?(jst)
Attachment #361663 - Flags: superreview?(jst)
Attachment #361663 - Flags: superreview+
Attachment #361663 - Flags: review?(jst)
Attachment #361663 - Flags: review+
Blocks: 468877
Comment on attachment 361663 [details] [diff] [review]
Fix

This is needed on the 1.9.1 branch as well.
Attachment #361663 - Flags: approval1.9.1?
http://hg.mozilla.org/mozilla-central/rev/325db1661cbb
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Attachment #361663 - Flags: approval1.9.1? → approval1.9.1+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: