Bug 477918 - Don't cast the narrower type to a wider type and write to it. r+sr=jst