modules/plugin/base/src/nsNPAPIPlugin.cpp
@@ -2046,7 +2046,9 @@ _getvalue(NPP npp, NPNVariable variable, void *result)
   case NPNVprivateModeBool: {
     nsCOMPtr<nsIPrivateBrowsingService> pbs = do_GetService(NS_PRIVATE_BROWSING_SERVICE_CONTRACTID);
     if (pbs) {
-      pbs->GetPrivateBrowsingEnabled((PRBool*)result);
+      PRBool enabled;
+      pbs->GetPrivateBrowsingEnabled(&enabled);
+      *(NPBool*)result = (NPBool)enabled;
       return NPERR_NO_ERROR;
     }
     return NPERR_GENERIC_ERROR;
